NMS-13770: Refactoring of flow processing
Split the flow enrichment out of the elastic implementation. Use a
common pipeline to process, enrich, make and threshold flows before
passing to the repositroies.

This also makes the kafka flow forwarder a freestanding repository
implementation.